created cart page

--- a/cart/!CART.html
+++ b/cart/!CART.html
@@ -7,28 +7,42 @@
 </head>
 <body>
 
- <!-- NAVBAR -->
-    <header class="navbar">
-        <div class="logo">🐾</div>
-
-        <nav>
-            <ul class="nav-links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a class="active" href="#">Products</a></li>
-                <li><a href="#">Contact Us</a></li>
-            </ul>
-        </nav>
-
-        <div class="nav-icons">
-            <span>♡</span>
-            <span>🛒</span>
-            <span>🔍</span>
-            <button class="finder-btn">Pet Match Finder</button>
+ <!-- SITE HEADER  -->
+  <header class="site-header">
+    <div class="header-inner">
+      <div class="brand">
+        <div class="paw">
+          <img style="width: 40px;height: 40px;" src="logo.png" alt="">
         </div>
-    </header>
+        <div class="brand-text">
+          <div class="brand-title">Pawfect Mart</div>
+          <div class="brand-sub">Pet Supplies & Accessories</div>
+        </div>
+      </div>
 
+      <nav class="main-nav">
+        <a href="#">Home</a>
+        <a href="#">About Us</a>
+        <a href="#">Products</a>
+        <a href="#">Contact Us</a>
+      </nav>
 
+      <div class="header-tools">
+        <button class="icon-btn">
+          <img style="width: 30px;height: 30px;" src="man.png" alt="">
+        </button>
+        <button class="icon-btn">
+          <img style="width: 30px;height: 30px;" src="cart.png" alt="">
+        </button>
+        <button class="icon-btn">
+          <img style="width: 30px;height: 30px;" src="heart.png" alt="">
+        </button>
+        <button class="finder">Pet Match Finder</button>
+      </div>
+    </div>
+  </header>
+
+<div class="page-wrap">
 <div class="container">
 
     <div class="cart-items">
@@ -36,7 +50,7 @@
 
         <!-- Item 1 -->
         <div class="item">
-            <img src="C:\Users\Pakistan\Desktop\cart\rubber bones.png">
+            <img src="8.png">
             <div class="details">
                 <p class="arrive">Estimated arrival 24 Sep 2025</p>
                 <h3>Dog Rubber Bones</h3>
@@ -59,7 +73,7 @@
 
         <!-- Item 2 -->
         <div class="item">
-            <img src="C:\Users\Pakistan\Desktop\cart\dog food.png">
+            <img src="9.png">
             <div class="details">
                 <p class="delivered">Delivered on 04 August</p>
                 <h3>Puppy Paw Dog Food</h3>
@@ -82,7 +96,7 @@
 
         <!-- Item 3 -->
         <div class="item">
-            <img src="C:\Users\Pakistan\Desktop\cart\cat food.png">
+            <img src="2.png">
             <div class="details">
                 <p class="delivered">Delivered on 04 August</p>
                 <h3>Whiskas Cat Dinner</h3>
@@ -122,14 +136,57 @@
         <button class="btn grey">Save for Later</button>
     </div>
 </div>
+</div>
+<!-- FOOTER (standalone) -->
+  <footer class="site-footer">
+    <div class="footer-inner">
+      <div class="footer-logo">
+        <img style="width: 70px;height: 70px;" src="logo.png" alt="">
+      </div>
 
-<!-- FOOTER -->
+      <div class="footer-col">
+        <h4>Featured</h4>
+        <ul><li>Tug ropes</li><li>Rubber bone</li><li>Whiskas Food</li><li>Royal Kanin</li></ul>
+      </div>
+
+      <div class="footer-col">
+        <h4>Cats</h4>
+        <ul><li>Food Items</li><li>Cats Toys</li><li>Cages</li><li>Cat Shoes</li></ul>
+      </div>
+
+      <div class="footer-col">
+        <h4>Dogs</h4>
+        <ul><li>Dog Food Items</li><li>Dog Toys</li><li>Dog Cages</li><li>Dog Hats</li></ul>
+      </div>
+
+      <div class="footer-col">
+        <h4>All Pet Toys</h4>
+        <ul><li>Rope Toy</li><li>Frisbee</li><li>Squeaky toy</li><li>Hanging toy ball</li></ul>
+      </div>
+    </div>
+
+ 
+
+
+
+  </footer>
+
+
+      <!-- FOOTER -->
 <footer class="footer">
     
     <div class="footer-left">
-        <div class="social-icon">𝕏</div>
-        <div class="social-icon">f</div>
-        <div class="social-icon">📷</div>
+      
+        <button class="social-icon">
+        <div class="social-icon">
+          <img style="width: 30px;height: 30px;" src="insta.png" alt="">
+        </div>
+        <div class="social-icon">
+          <img style="width: 30px;height: 30px;" src="faceboo.png" alt="">
+        </div>
+        <div class="social-icon">
+          <img style="width: 30px;height: 30px;" src="twee.png" alt="">
+        </div>
     </div>
 
     <div class="footer-links">
