--- a/contact us/contact.html
+++ b/contact us/contact.html
@@ -7,23 +7,41 @@
     <link rel="stylesheet" href="contact.css">
 </head>
 <body>
-    <header class="navbar">
-        <div class="logo">🐾</div>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Products</a></li>
-                <li><a href="#">Contact Us</a></li>
-            </ul>
-        </nav>
-        <div class="icons">
-            <span>♡</span>
-            <span>🛒</span>
-            <span>🔍</span>
-            <button class="finder-btn">Pet Match Finder</button>
+
+
+    <header class="site-header">
+    <div class="header-inner">
+      <div class="brand">
+        <div class="paw">
+          <img style="width: 40px;height: 40px;" src="logo.png" alt="">
         </div>
-    </header>
+        <div class="brand-text">
+          <div class="brand-title">Pawfect Mart</div>
+          <div class="brand-sub">Pet Supplies & Accessories</div>
+        </div>
+      </div>
+
+      <nav class="main-nav">
+        <a href="#">Home</a>
+        <a href="#">About Us</a>
+        <a href="#">Products</a>
+        <a href="#">Contact Us</a>
+      </nav>
+
+      <div class="header-tools">
+        <button class="icon-btn">
+          <img style="width: 30px;height: 30px;" src="man.png" alt="">
+        </button>
+        <button class="icon-btn">
+          <img style="width: 30px;height: 30px;" src="cart.png" alt="">
+        </button>
+        <button class="icon-btn">
+          <img style="width: 30px;height: 30px;" src="heart.png" alt="">
+        </button>
+        <button class="finder">Login/Signup</button>
+      </div>
+    </div>
+  </header>
 
     <h1 class="page-title">CONTACT US</h1>
     <hr class="divider">
@@ -60,24 +78,31 @@
         </div>
     </section>
 
-    <section class="faq-section">
+     <div class="faq-box">
         <h2>FAQ,s</h2>
-        <ul>
-            <li>How can I track my order? ➜ Email</li>
-            <li>Do you offer free shipping? ➜ Yes</li>
-            <li>What is your return policy? ➜ 14 days</li>
-            <li>Can I get help choosing the right size? ➜ Yes</li>
-            <li>Do you sell accessories for all pets? ➜ Yes</li>
-        </ul>
-    </section>
+        <p><strong>How can I track my order?</strong> → Email</p>
+        <p><strong>Do you offer free shipping?</strong> → Yes</p>
+        <p><strong>What is your return policy?</strong> → 14 days</p>
+        <p><strong>Can I get help choosing the right size?</strong> → Yes</p>
+        <p><strong>Do you sell accessories for all pets?</strong> → Yes</p>
+    </div>
 
-<!-- FOOTER -->
+
+      <!-- FOOTER -->
 <footer class="footer">
     
     <div class="footer-left">
-        <div class="social-icon">𝕏</div>
-        <div class="social-icon">f</div>
-        <div class="social-icon">📷</div>
+      
+        <button class="social-icon">
+        <div class="social-icon">
+          <img style="width: 30px;height: 30px;" src="insta.png" alt="">
+        </div>
+        <div class="social-icon">
+          <img style="width: 30px;height: 30px;" src="faceboo.png" alt="">
+        </div>
+        <div class="social-icon">
+          <img style="width: 30px;height: 30px;" src="twee.png" alt="">
+        </div>
     </div>
 
     <div class="footer-links">
@@ -89,7 +114,5 @@
     </div>
 
 </footer>
-
-
 </body>
 </html>
