updated product pages

--- a/product_detail.html
+++ b/product_detail.html
@@ -143,7 +143,41 @@
     </section>
 
 
-    </footer>
+
+
+      <!-- FOOTER (standalone) -->
+  <footer class="site-footer">
+    <div class="footer-inner">
+      <div class="footer-logo">
+        <img style="width: 70px;height: 70px;" src="logo.png" alt="">
+      </div>
+
+      <div class="footer-col">
+        <h4>Featured</h4>
+        <ul><li>Tug ropes</li><li>Rubber bone</li><li>Whiskas Food</li><li>Royal Kanin</li></ul>
+      </div>
+
+      <div class="footer-col">
+        <h4>Cats</h4>
+        <ul><li>Food Items</li><li>Cats Toys</li><li>Cages</li><li>Cat Shoes</li></ul>
+      </div>
+
+      <div class="footer-col">
+        <h4>Dogs</h4>
+        <ul><li>Dog Food Items</li><li>Dog Toys</li><li>Dog Cages</li><li>Dog Hats</li></ul>
+      </div>
+
+      <div class="footer-col">
+        <h4>All Pet Toys</h4>
+        <ul><li>Rope Toy</li><li>Frisbee</li><li>Squeaky toy</li><li>Hanging toy ball</li></ul>
+      </div>
+    </div>
+
+ 
+
+
+
+  </footer>
 
 
       <!-- FOOTER -->
@@ -172,7 +206,6 @@
     </div>
 
 </footer>
-
 
 </body>
 </html>
