updated payment page header footer and content

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -8,13 +8,19 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;700;800&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 
-  <!-- External CSS -->
+
+  
   <link rel="stylesheet" href="style.css">
 </head>
+
+
+
+
 
 <body>
 
   <!-- SITE HEADER  -->
+   
   <header class="site-header">
     <div class="header-inner">
       <div class="brand">
@@ -28,7 +34,7 @@
       </div>
 
       <nav class="main-nav">
-        <a href="#">Home</a>
+        <a href="">Home</a>
         <a href="#">About Us</a>
         <a href="#">Products</a>
         <a href="#">Contact Us</a>
@@ -58,19 +64,21 @@
 </section>
 
   <!-- MAIN CONTENT -->
+
+
   <main class="container">
 
-    <h3>Pawfect's Special</h3>
+    <h1>Pawfect's Special</h1>
 
     <div class="products-row">
-
+      
       <div class="card">
         <div class="image" style="background-image:url(10.png);"></div>
         <h4>North Paw<br><small>Dog Food</small></h4>
         <div class="price">PKR/-4000</div>
         <a class="shop" href="#">Shop Now</a>
       </div>
-
+       
       <div class="card">
         <div class="image" style="background-image:url('5.png');"></div>
         <h4>Royal Canin - KITTEN<br><small>Cat Food</small></h4>
