--- a/payment/payment.html
+++ b/payment/payment.html
@@ -9,26 +9,40 @@
 
 <body>
 
-     <!-- NAVBAR -->
-    <header class="navbar">
-        <div class="logo">🐾</div>
-
-        <nav>
-            <ul class="nav-links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a class="active" href="#">Products</a></li>
-                <li><a href="#">Contact Us</a></li>
-            </ul>
-        </nav>
-
-        <div class="nav-icons">
-            <span>♡</span>
-            <span>🛒</span>
-            <span>🔍</span>
-            <button class="finder-btn">Pet Match Finder</button>
+     <!-- SITE HEADER  -->
+  <header class="site-header">
+    <div class="header-inner">
+      <div class="brand">
+        <div class="paw">
+          <img style="width: 40px;height: 40px;" src="logo.png" alt="">
         </div>
-    </header>
+        <div class="brand-text">
+          <div class="brand-title">Pawfect Mart</div>
+          <div class="brand-sub">Pet Supplies & Accessories</div>
+        </div>
+      </div>
+
+      <nav class="main-nav">
+        <a href="#">Home</a>
+        <a href="#">About Us</a>
+        <a href="#">Products</a>
+        <a href="#">Contact Us</a>
+      </nav>
+
+      <div class="header-tools">
+        <button class="icon-btn">
+          <img style="width: 30px;height: 30px;" src="man.png" alt="">
+        </button>
+        <button class="icon-btn">
+          <img style="width: 30px;height: 30px;" src="cart.png" alt="">
+        </button>
+        <button class="icon-btn">
+          <img style="width: 30px;height: 30px;" src="heart.png" alt="">
+        </button>
+        <button class="finder">Pet Match Finder</button>
+      </div>
+    </div>
+  </header>
 
 
 
@@ -150,13 +164,56 @@
 
     </section>
 </main>
-<!-- FOOTER -->
+<!-- FOOTER (standalone) -->
+  <footer class="site-footer">
+    <div class="footer-inner">
+      <div class="footer-logo">
+        <img style="width: 70px;height: 70px;" src="logo.png" alt="">
+      </div>
+
+      <div class="footer-col">
+        <h4>Featured</h4>
+        <ul><li>Tug ropes</li><li>Rubber bone</li><li>Whiskas Food</li><li>Royal Kanin</li></ul>
+      </div>
+
+      <div class="footer-col">
+        <h4>Cats</h4>
+        <ul><li>Food Items</li><li>Cats Toys</li><li>Cages</li><li>Cat Shoes</li></ul>
+      </div>
+
+      <div class="footer-col">
+        <h4>Dogs</h4>
+        <ul><li>Dog Food Items</li><li>Dog Toys</li><li>Dog Cages</li><li>Dog Hats</li></ul>
+      </div>
+
+      <div class="footer-col">
+        <h4>All Pet Toys</h4>
+        <ul><li>Rope Toy</li><li>Frisbee</li><li>Squeaky toy</li><li>Hanging toy ball</li></ul>
+      </div>
+    </div>
+
+ 
+
+
+
+  </footer>
+
+
+      <!-- FOOTER -->
 <footer class="footer">
     
     <div class="footer-left">
-        <div class="social-icon">𝕏</div>
-        <div class="social-icon">f</div>
-        <div class="social-icon">📷</div>
+      
+        <button class="social-icon">
+        <div class="social-icon">
+          <img style="width: 30px;height: 30px;" src="insta.png" alt="">
+        </div>
+        <div class="social-icon">
+          <img style="width: 30px;height: 30px;" src="faceboo.png" alt="">
+        </div>
+        <div class="social-icon">
+          <img style="width: 30px;height: 30px;" src="twee.png" alt="">
+        </div>
     </div>
 
     <div class="footer-links">
