updated payent page and contact us
added pictures tp payment

--- a/payment/payment.html
+++ b/payment/payment.html
@@ -55,7 +55,7 @@
 
         <!-- PRODUCT 1 -->
         <div class="cart-item">
-            <img src="C:\Users\Pakistan\Desktop\payment\rubber bones.png" alt="Dog Rubber Bones">
+            <img src="rubber bones.png" alt="Dog Rubber Bones">
             <div class="item-info">
                 <p class="arrival">Estimated arrival 24 Sep 2025</p>
                 <h3>Dog Rubber Bones</h3>
@@ -74,7 +74,7 @@
 
         <!-- PRODUCT 2 -->
         <div class="cart-item">
-            <img src="C:\Users\Pakistan\Desktop\payment\dog food.png" alt="Puppy Paw Dog Food">
+            <img src="dog food.png" alt="Puppy Paw Dog Food">
             <div class="item-info">
                 <p class="delivered">Delivered on 04 August</p>
                 <h3>Puppy Paw Dog Food</h3>
@@ -93,7 +93,7 @@
 
         <!-- PRODUCT 3 -->
         <div class="cart-item">
-            <img src="C:\Users\Pakistan\Desktop\payment\cat food.png" alt="Whiskas Cat Dinner">
+            <img src="cat food.png" alt="Whiskas Cat Dinner">
             <div class="item-info">
                 <p class="delivered">Delivered on 04 August</p>
                 <h3>Whiskas Cat Dinner</h3>
