--- a/payment/payment.html
+++ b/payment/payment.html
@@ -164,8 +164,9 @@
 
     </section>
 </main>
+
 <!-- FOOTER (standalone) -->
-  <footer class="site-footer">
+<footer class="site-footer">
     <div class="footer-inner">
       <div class="footer-logo">
         <img style="width: 70px;height: 70px;" src="logo.png" alt="">
@@ -191,19 +192,11 @@
         <ul><li>Rope Toy</li><li>Frisbee</li><li>Squeaky toy</li><li>Hanging toy ball</li></ul>
       </div>
     </div>
+</footer>
 
- 
-
-
-
-  </footer>
-
-
-      <!-- FOOTER -->
+<!-- FOOTER 2 -->
 <footer class="footer">
-    
     <div class="footer-left">
-      
         <button class="social-icon">
         <div class="social-icon">
           <img style="width: 30px;height: 30px;" src="insta.png" alt="">
@@ -223,9 +216,12 @@
         <a href="#">FAQs</a>
         <a href="#">Pawfect Privacy Policy</a>
     </div>
-
 </footer>
 
+<!--  ALERTS  -->
+<script>
+    alert("Make sure to review your order before checkout");
+</script>
 
 </body>
 </html>
