updated script of java script to check out button

--- a/payment/payment.html
+++ b/payment/payment.html
@@ -160,7 +160,7 @@
             <input type="password" placeholder="Enter pin again">
         </div>
 
-        <button class="checkout-btn">Check Out</button>
+        <button onclick="ClickHere()" class="checkout-btn">Check Out</button>
 
     </section>
 </main>
@@ -221,6 +221,14 @@
 <!--  ALERTS  -->
 <script>
     alert("Make sure to review your order before checkout");
+</script>
+
+<script>
+  function ClickHere() {
+    console.log("Displaying ClickHere information...");
+    window.alert("Hi Touseef.");
+  }
+ 
 </script>
 
 </body>
