--- a/payment/payment.html
+++ b/payment/payment.html
@@ -194,7 +194,7 @@
     </div>
 </footer>
 
-<!-- FOOTER 2 -->
+<!-- FOOTER  -->
 <footer class="footer">
     <div class="footer-left">
         <button class="social-icon">
