--- a/payment/payment.html
+++ b/payment/payment.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping Cart - LUU</title>
     <link rel="stylesheet" href="payment.css">
+    <script src="payment.js">
+</script>
 </head>
 
 <body>
@@ -218,18 +220,9 @@
     </div>
 </footer>
 
-<!--  ALERTS  -->
-<script>
-    alert("Make sure to review your order before checkout");
-</script>
 
-<script>
-  function ClickHere() {
-    console.log("Displaying ClickHere information...");
-    window.alert("Hi Touseef.");
-  }
- 
-</script>
+
+
 
 </body>
 </html>
