updated interaction between pages

--- a/All pages/home.html
+++ b/All pages/home.html
@@ -44,9 +44,9 @@
         <button class="icon-btn">
           <img style="width: 30px;height: 30px;" src="man.png" alt="">
         </button>
-        <button class="icon-btn">
+        <a href="cart.html"><button class="icon-btn">
           <img style="width: 30px;height: 30px;" src="cart.png" alt="">
-        </button>
+        </button></a>
         <button class="icon-btn">
           <img style="width: 30px;height: 30px;" src="heart.png" alt="">
         </button>
@@ -76,21 +76,21 @@
         <div class="image" style="background-image:url(10.png);"></div>
         <h4>North Paw<br><small>Dog Food</small></h4>
         <div class="price">PKR/-4000</div>
-        <a class="shop" href="#">Shop Now</a>
+        <a class="shop" href="cart.html">Shop Now</a>
       </div>
        
       <div class="card">
         <div class="image" style="background-image:url('5.png');"></div>
         <h4>Royal Canin - KITTEN<br><small>Cat Food</small></h4>
         <div class="price">PKR/-3000</div>
-        <a class="shop" href="#">Shop Now</a>
+        <a class="shop" href="cart.html">Shop Now</a>
       </div>
 
       <div class="card">
-        <div class="image" style="background-image:url('8.png');"></div>
+        <a href="product_detail.html"><div class="image" style="background-image:url('8.png');"></div></a>
         <h4>Dog Rubber Bones<br><small>Dog Toys</small></h4>
         <div class="price">PKR/-500</div>
-        <a class="shop" href="#">Shop Now</a>
+        <a class="shop" href="cart.html">Shop Now</a>
       </div>
 
     </div>
