--- a/All pages/payment.html
+++ b/All pages/payment.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping Cart - LUU</title>
     <link rel="stylesheet" href="payment.css">
+    <script src="payment.js"></script>
 </head>
 
 <body>
@@ -23,10 +24,10 @@
       </div>
 
       <nav class="main-nav">
-        <a href="home.html">Home</a>
-        <a href="about.html">About Us</a>
-        <a href="prod listing.html">Products</a>
-        <a href="contact.html">Contact Us</a>
+        <a href="#">Home</a>
+        <a href="#">About Us</a>
+        <a href="#">Products</a>
+        <a href="#">Contact Us</a>
       </nav>
 
       <div class="header-tools">
@@ -39,8 +40,8 @@
         <button class="icon-btn">
           <img style="width: 30px;height: 30px;" src="heart.png" alt="">
         </button>
-<a href="pet.html"><button class="finder">Pet Match Finder</button></a>  
-         </div>
+        <button class="finder">Pet Match Finder</button>
+      </div>
     </div>
   </header>
 
@@ -160,12 +161,13 @@
             <input type="password" placeholder="Enter pin again">
         </div>
 
-        <button class="checkout-btn">Check Out</button>
+        <button onclick="ClickHere()" class="checkout-btn">Check Out</button>
 
     </section>
 </main>
+
 <!-- FOOTER (standalone) -->
-  <footer class="site-footer">
+<footer class="site-footer">
     <div class="footer-inner">
       <div class="footer-logo">
         <img style="width: 70px;height: 70px;" src="logo.png" alt="">
@@ -191,19 +193,11 @@
         <ul><li>Rope Toy</li><li>Frisbee</li><li>Squeaky toy</li><li>Hanging toy ball</li></ul>
       </div>
     </div>
+</footer>
 
- 
-
-
-
-  </footer>
-
-
-      <!-- FOOTER -->
+<!-- FOOTER  -->
 <footer class="footer">
-    
     <div class="footer-left">
-      
         <button class="social-icon">
         <div class="social-icon">
           <img style="width: 30px;height: 30px;" src="insta.png" alt="">
@@ -217,14 +211,16 @@
     </div>
 
     <div class="footer-links">
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
         <a href="#">Terms of Sale</a>
         <a href="#">FAQs</a>
         <a href="#">Pawfect Privacy Policy</a>
     </div>
-
 </footer>
+
+
+
 
 
 </body>
