--- a/homepage/home.html
+++ b/homepage/home.html
@@ -11,6 +11,8 @@
 
   
   <link rel="stylesheet" href="home.css">
+      <script src="home.js"></script>
+
 </head>
 
 
@@ -44,8 +46,8 @@
         <button class="icon-btn">
           <img style="width: 30px;height: 30px;" src="man.png" alt="">
         </button>
-        <button class="icon-btn">
-          <img style="width: 30px;height: 30px;" src="cart.png" alt="">
+        <button onclick="Cli()" class="icon-btn">
+          <img  style="width: 30px;height: 30px;" src="cart.png" alt="">
         </button>
         <button class="icon-btn">
           <img style="width: 30px;height: 30px;" src="heart.png" alt="">
