--- a/All pages/cart.html
+++ b/All pages/cart.html
@@ -4,6 +4,7 @@
   
     <title>Cart Page</title>
     <link rel="stylesheet" href="cart.css">
+    <script src="cart.js"></script>
 </head>
 <body>
 
@@ -21,10 +22,10 @@
       </div>
 
       <nav class="main-nav">
-        <a href="home.html">Home</a>
-        <a href="about.html">About Us</a>
-        <a href="prod listing.html">Products</a>
-        <a href="contact.html">Contact Us</a>
+        <a href="#">Home</a>
+        <a href="#">About Us</a>
+        <a href="#">Products</a>
+        <a href="#">Contact Us</a>
       </nav>
 
       <div class="header-tools">
@@ -37,8 +38,8 @@
         <button class="icon-btn">
           <img style="width: 30px;height: 30px;" src="heart.png" alt="">
         </button>
-<a href="pet.html"><button class="finder">Pet Match Finder</button></a>  
-    </div>
+        <button class="finder">Pet Match Finder</button>
+      </div>
     </div>
   </header>
 
@@ -67,7 +68,8 @@
 
             <div class="price-box">
                 <p class="price">PKR-/300</p>
-                <span class="delete">🗑️</span>
+
+                <span onclick="ClickHere()" class="delete">🗑️</span>
             </div>
         </div>
 
@@ -90,7 +92,7 @@
 
             <div class="price-box">
                 <p class="price">PKR-/6000</p>
-                <span class="delete">🗑️</span>
+                <span onclick="ClickHere()" class="delete">🗑️</span>
             </div>
         </div>
 
@@ -113,7 +115,7 @@
 
             <div class="price-box">
                 <p class="price">PKR-/3000</p>
-                <span class="delete">🗑️</span>
+                <span onclick="ClickHere()" class="delete">🗑️</span>
             </div>
         </div>
 
@@ -131,7 +133,7 @@
 
         <div class="row total"><strong>Total</strong><strong>PKR-/10400</strong></div>
 
-        <button class="btn teal">Proceed to Checkout</button>
+        <button onclick="Click()"  class="btn teal">Proceed to Checkout</button>
         <button class="btn green">Continue Shopping</button>
         <button class="btn grey">Save for Later</button>
     </div>
@@ -190,8 +192,8 @@
     </div>
 
     <div class="footer-links">
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
         <a href="#">Terms of Sale</a>
         <a href="#">FAQs</a>
         <a href="#">Pawfect Privacy Policy</a>
