--- a/payment/payment.html
+++ b/payment/payment.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping Cart - LUU</title>
     <link rel="stylesheet" href="payment.css">
-    <script src="payment.js">
-</script>
+    <script src="payment.js"></script>
 </head>
 
 <body>
