--- a/All pages/cart.html
+++ b/All pages/cart.html
@@ -22,10 +22,10 @@
       </div>
 
       <nav class="main-nav">
-        <a href="#">Home</a>
-        <a href="#">About Us</a>
-        <a href="#">Products</a>
-        <a href="#">Contact Us</a>
+        <a href="home.html">Home</a>
+        <a href="about.html">About Us</a>
+        <a href="prod listing.html">Products</a>
+        <a href="contact.html">Contact Us</a>
       </nav>
 
       <div class="header-tools">
@@ -38,7 +38,7 @@
         <button class="icon-btn">
           <img style="width: 30px;height: 30px;" src="heart.png" alt="">
         </button>
-        <button class="finder">Pet Match Finder</button>
+        <a href="pet.html"><button class="finder">Pet Match Finder</button></a>
       </div>
     </div>
   </header>
@@ -192,8 +192,8 @@
     </div>
 
     <div class="footer-links">
-        <a href="#">About</a>
-        <a href="#">Contact</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
         <a href="#">Terms of Sale</a>
         <a href="#">FAQs</a>
         <a href="#">Pawfect Privacy Policy</a>
