--- a/All pages/home.html
+++ b/All pages/home.html
@@ -36,10 +36,10 @@
       </div>
 
       <nav class="main-nav">
-        <a href="">Home</a>
-        <a href="#">About Us</a>
-        <a href="#">Products</a>
-        <a href="#">Contact Us</a>
+        <a href="home.html">Home</a>
+        <a href="about.html">About Us</a>
+        <a href="prod listing.html">Products</a>
+        <a href="contact.html">Contact Us</a>
       </nav>
 
       <div class="header-tools">
@@ -52,7 +52,7 @@
         <button class="icon-btn">
           <img style="width: 30px;height: 30px;" src="heart.png" alt="">
         </button>
-        <button class="finder">Login/Signup</button>
+        <a href="login.html">        <button class="finder">Login/Signup</button></a>
       </div>
     </div>
   </header>
@@ -78,21 +78,21 @@
         <div class="image" style="background-image:url(10.png);"></div>
         <h4>North Paw<br><small>Dog Food</small></h4>
         <div class="price">PKR/-4000</div>
-        <a class="shop" href="#">Shop Now</a>
+        <a class="shop" href="cart.html">Shop Now</a>
       </div>
        
       <div class="card">
-        <div class="image" style="background-image:url('5.png');"></div>
+        <a href="product_detail.html"><div class="image" style="background-image:url('5.png');"></div></a>
         <h4>Royal Canin - KITTEN<br><small>Cat Food</small></h4>
         <div class="price">PKR/-3000</div>
-        <a class="shop" href="#">Shop Now</a>
+        <a class="shop" href="cart.html">Shop Now</a>
       </div>
 
       <div class="card">
-        <div class="image" style="background-image:url('8.png');"></div>
+        <a href="product_detail.html"><div class="image" style="background-image:url('8.png');"></div></a>
         <h4>Dog Rubber Bones<br><small>Dog Toys</small></h4>
         <div class="price">PKR/-500</div>
-        <a class="shop" href="#">Shop Now</a>
+        <a class="shop" href="cart.html">Shop Now</a>
       </div>
 
     </div>
@@ -199,8 +199,8 @@
     </div>
 
     <div class="footer-links">
-        <a href="#">About</a>
-        <a href="#">Contact</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
         <a href="#">Terms of Sale</a>
         <a href="#">FAQs</a>
         <a href="#">Pawfect Privacy Policy</a>
