updated home page

--- a/All pages/home.html
+++ b/All pages/home.html
@@ -75,7 +75,7 @@
     <div class="products-row">
       
       <div class="card">
-        <div class="image" style="background-image:url(10.png);"></div>
+        <a href="product_detail.html"><div class="image" style="background-image:url(10.png);"></div></a>
         <h4>North Paw<br><small>Dog Food</small></h4>
         <div class="price">PKR/-4000</div>
         <a class="shop" href="cart.html">Shop Now</a>
