updated product detail pic main pic

--- a/All pages/product_detail.html
+++ b/All pages/product_detail.html
@@ -60,7 +60,7 @@
 
         <!-- MAIN IMAGE -->
         <div class="main-image">
-            <img src="cat food.png" alt="">
+            <img src="cat.png" alt="">
             <p class="availability">AVAILABLE &nbsp; <strong>200 PIECES</strong></p>
         </div>
 
